--- a/src/components/Application/Application.css
+++ b/src/components/Application/Application.css
@@ -18,27 +18,27 @@
     box-shadow: 0px 0px 11px 0px rgb(70 70 70 / 10%);
 }
 
-.Application>.Header img {
+.Application>.Header>.Left img {
     height: 46px;
     width: 46px;
-    margin: 0 12px;
+    margin: 0 20px 0 16px;
     border: 2px solid;
     border-radius: 50%;
+    transform: rotate(15deg);
 }
 
-.Application>.Header svg {
-    height: 26px;
-}
-
-.Application>.Header h1 {
-    /* width: 200px;
-    height: 100%; */
+.Application>.Header>.Left {
+    font-size: 20px;
     display: flex;
     align-items: center;
-    /* border-top-right-radius: 0px;
-    padding-right: 70px;
-    border-bottom-right-radius: 0px;
-    box-shadow: 16px 0px 20px -10px rgb(70 70 70 / 10%); */
+    font-weight: 600;
+}
+
+.Application>.Header>.Right {
+    margin: 0 10px;
+}
+.Application>.Header>.Right button{
+    margin: 0 2px;
 }
 
 .Application>.Content {
@@ -61,6 +61,7 @@
 .Application>.Content>.Tags button {
     display: flex;
     flex-direction: row;
+    padding: 10px 16px;
     justify-content: flex-start;
     margin: 0 0 2px 0;
     border: 0;
