--- a/src/components/LockScreen/LockScreen.css
+++ b/src/components/LockScreen/LockScreen.css
@@ -23,6 +23,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    font-family: "ENL";
 }
 
 .LockScreen>.Title>.react-reveal {
