--- a/src/components/Application/Application.css
+++ b/src/components/Application/Application.css
@@ -18,21 +18,24 @@
     box-shadow: 0px 0px 11px 0px rgb(70 70 70 / 10%);
 }
 
-.Application>.Header>.Left img {
-    height: 46px;
-    width: 46px;
-    margin: 0 20px 0 16px;
-    border: 2px solid;
-    border-radius: 50%;
-    transform: rotate(15deg);
+.Application>.Header>.Left>div:first-child {
+    height: 43px;
+    width: 43px;
+    margin: 0 10px 0 14px;
 }
 
 .Application>.Header>.Left {
-    font-size: 20px;
+    font-size: 17px;
+    letter-spacing: .1em;
     display: flex;
     align-items: center;
-    font-family: ENB, CNB;
 }
+
+.Application>.Header>.Left>div:nth-child(2) {
+
+    transform: rotateX(180deg)rotateY(180deg);
+}
+
 
 .Application>.Header>.Right {
     margin: 0 10px;
@@ -48,13 +51,15 @@
     display: flex;
     flex-direction: row;
     align-items: stretch;
+    overflow: hidden;
 }
 
 .Application>.Content>.Tags {
     height: 100%;
+    min-width: 200px;
     width: 200px;
     display: flex;
-    /* border-right: 1px solid silver; */
+    border-right: 1px solid silver;
     box-shadow: 0px 0px 5px 0px rgb(70 70 70 / 10%);
     flex-direction: column;
 }
@@ -72,6 +77,31 @@
 
 .Application>.Content>.Tags button svg {
     margin-right: 10px;
+}
+
+.Application>.Content>.Tags button>div {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.my-masonry-grid {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: auto;
+    padding: 0 10px;
+}
+
+.my-masonry-grid_column {
+    background-clip: padding-box;
+}
+
+.Document {
+    border-radius: 10px !important;
+    box-shadow: 0px 0px 5px 0px rgb(70 70 70 / 10%);
+    margin: 20px 10px;
+    border: 1px solid silver;
 }
 
 .Resizer {
